--- a/hw15-web_server/src/main/resources/templates/login.html
+++ b/hw15-web_server/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
             <input type="password" name="pineCode" value="11111">
         </label>
         <br/><br/>
-        <input type="submit" value="Перейти к списку пользователей">
+        <input type="submit" value="Ввод">
     </form>
 </div>
 </body>
